artifacts/ext-authz/ref-grant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-access-to-extauthz
  namespace: default
spec:
  from:
  - group: gateway.envoyproxy.io
    kind: SecurityPolicy
    namespace: httpbin
  to:
  - group: ""
    kind: Service
